--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,5 @@
-body{
+*{
     margin: 0;
-}
-
-.navbar{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
-    color: white;
-    margin: 0;
-
-}
-
-.nav-item{
-    list-style: none;
-    text-decoration: none;
-    padding: 2px;
+    padding: 0;
+    font-family: sans-serif;
 }
