--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,6 @@
+.main-container{
+    position: relative;
+}
 .header{
     margin: 0;
     padding: 20px 30px;
@@ -6,6 +9,9 @@
     justify-content: space-between;
     background-color: rgb(255, 255, 255);
     border-bottom: 1px solid gainsboro;
+    position: sticky;
+    z-index: 100;
+    top: 0;
 }
 .header a{
     text-decoration: none;
