--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,7 @@
+:root{
+    --blue-color: rgb(22, 60, 144) !important;
+}
+
 .main-container{
     position: relative;
 }
@@ -7,11 +11,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(255, 255, 255);
-    border-bottom: 1px solid gainsboro;
     position: sticky;
     z-index: 100;
     top: 0;
+    border-bottom: 1px solid rgba(42, 39, 39, 0.3);
+    background-color: rgba(255, 255, 255, 0.9);
+    backdrop-filter: blur(4px);
 }
 .header a{
     text-decoration: none;
@@ -20,7 +25,7 @@
     display: flex;
     align-items: center;
     background-color: white;
-    color: blue;
+    color: var(--blue-color);
     border-radius: 10px;
     text-transform: uppercase;
 }
@@ -31,19 +36,19 @@
     
 }
 #name{
-    color: blue;
+    color: var(--blue-color);
     border-width: 2px 0px 2px 2px;
     border-style: solid;
-    border-color: blue;
+    border-color: var(--blue-color);
     border-radius: 10px 0px 0px 10px;
 }
 #service{
-    background-color: blue;
+    background-color: var(--blue-color);
     border-radius:0px 10px 10px 0px;
     color: rgb(255, 255, 255);
     border-width: 2px 2px 2px 0px;
     border-style: solid;
-    border-color: blue;
+    border-color: var(--blue-color);
 }
 .navbar{
     display: flex;
@@ -56,11 +61,87 @@
     padding: 15px 0px;
     padding-left: 30px;
     text-decoration: none;
-    color: rgb(58, 58, 255);
+    color: var(--blue-color) ;
     font-size: large;
 }
 
 .nav-link a:hover{
     cursor: pointer;
     color: black
+}
+.open_button{
+    display: none;
+}
+
+/* Media Query */
+@media (max-width: 760px) {
+    .header{
+        padding: 24px 14px;
+    }
+    #name{
+        font-size: 12px;
+    }
+    #service{
+        font-size: 12px;
+    }
+    .open_button{
+        background-color: white;
+        border-radius: 50%;
+        box-shadow:1px 1px 5px 0px black;
+        z-index: 900;
+        width: 35px;
+        height: 35px;
+        position: fixed;
+        right: 30px;
+        top: 26px;
+        color: grey;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+
+    }
+    .navbar{
+        display: none;
+    }
+    
+}
+.main{
+    position: relative;
+}
+.sidebarOn{
+    transition: 1s;    
+    position: fixed;
+    z-index: 800;
+    height: 100%;
+    width: 250px;
+    right: 0;
+    top: 0;
+    background-color: var(--blue-color);
+    
+}
+.sidebarOff{
+    transition: 1s;
+    position: fixed;
+    z-index: 800;
+    height: 0%;
+    width: 250px;
+    right: -100%;
+    top: -100%;
+    background-color: var(--blue-color);
+
+}
+.side_navbar{
+    display: flex;
+    flex-direction: column;
+    margin-top: 35px;
+}
+.side_navbar .nav-link{
+    padding-top: 10px;
+    list-style: none;
+}
+.side_navbar .nav-link a{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
 }
