--- a/src/components/todoPage/todo.css
+++ b/src/components/todoPage/todo.css
@@ -1,41 +1,152 @@
-.main-section{
-    display: flex;
-    align-items: center;
-    box-sizing: border-box;
-    /* height:calc(100vh - 80px); */
-    width: 90%;
-    margin: auto;
-}
-.main-section-reverse{
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    box-sizing: border-box;
-    height:calc(100vh - 80px);
-    width: 90%;
-    margin: auto;
-}
-.main-content{
-    flex: 1;
-}
-.section-heading{
-    font-size: 33px;
-}
-.section-description{
-    width: 500px;
-    font-size: 18px;
 
-}
-.main-image{
+#todo_section{
     display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 40px auto;
+    padding: 40px ;
+    width: 50%;
+    /* box-shadow:1px 1px 5px 0px  rgb(255, 255, 255); */
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.1);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+}
+.main_heading{
+    color: var(--blue-color);
+    text-align: center;
+    font-size: 50px;
+    text-decoration: underline 4px;
+    margin-bottom: 20px;
+}
+.input_section{
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
     justify-content: center;
+    width: 100%;
+}
+.text_input{
+    /* max-width: 70%; */
+    padding: 8px 16px;
+    line-height: 30px;
+    margin-right: 5px;
+    border:4px solid var(--blue-color) !important; 
+    border-radius: 100px;
+    font-size: large;
+    outline: none;
+}
+.time_input{
+    max-width: 30%;
+    padding: 8px 16px;
+    line-height: 30px;
+    margin-right: 5px;
+    border:4px solid var(--blue-color) !important; 
+    border-radius: 100px;
+    font-size: large;
+    outline: none;    
+}
+.input_section > svg {
+    color: var(--blue-color);
+    line-height: 30px;
+    font-size: 60px;
+}
+.input_section > svg :hover{
+    cursor: pointer;
+}
+.list{
+    width: 100%;
+    min-height: 60vh;
+    margin-top: 20px;
+}
+.todo-item{
+    border-bottom: 1px solid var(--blue-color);
+    padding: 8px 14px;
+    display: flex;
+    margin: 20px 15px;
+    justify-content: space-between;
+    align-items: center;
+}
+.todo_text{
+    font-size: 25px;
+    font-weight: 600;
+}
+.redColor{
+    color: rgb(99, 201, 99);
+}
+.blueColor{
+    color: var(--blue-color);
+}
+.buttons > svg{
+    margin-left: 10px;
+    font-size: 20px;
+    color: var(--blue-color);
+}
+input [type='checkbox'] {
+    cursor: pointer;
+}
+.buttons>svg:hover{
+    color: red;
+    transition: 0.8s;
+    transform: scale(1.5);
+    cursor: pointer;
 }
 
-@media (max-width: 1024px) {
-    .main-section, .main-section-reverse{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 100px auto;
-    } 
+.textWrapper{
+    display: flex;
+    align-items: center;
+    align-items: center;
 }
+
+.textWrapper > input{
+    margin-right: 10px;
+}
+
+.edit_todo{
+    color: var(--blue-color);
+    font-size: 25px;
+    max-width: 250px;
+    font-weight: 600;
+    border: none;
+    outline-style: none;
+}
+@media (max-width: 768px) {
+    #todo_section{
+        width: 80%;
+    }
+
+}
+
+@media (max-width: 425px) {
+    #todo_section{
+        width: 90%;
+    }
+    .main_heading{
+        text-align: center;
+        font-size: 30px;
+    }
+    .input_section input{
+        border:2px solid var(--blue-color) !important; 
+    }
+
+    .input_section > svg {
+        color: var(--blue-color);
+        line-height: 30px;
+        font-size: 50px;
+    }
+    .todo-item{
+        font-weight: 500;
+        border-radius: 7px;
+        box-shadow: 1px 2px 3px rgb(67, 67, 67);
+        padding: 8px 14px;
+        display: flex;
+        margin: 15px;
+        font-size: 20px;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+}
+
+
