--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -124,10 +124,10 @@
     transition: 1s;
     position: fixed;
     z-index: 800;
-    height: 0%;
+    height: 100%;
     width: 250px;
-    right: -100%;
-    top: -100%;
+    right: -250px;
+    top: 0;
     background-color: var(--blue-color);
 
 }
