--- a/src/components/todoPage/Todo.css
+++ b/src/components/todoPage/Todo.css
@@ -78,6 +78,10 @@
 .blueColor{
     color: var(--blue-color);
 }
+.buttons{
+    display: flex;
+    flex-wrap: nowrap;
+}
 .buttons > svg{
     margin-left: 10px;
     font-size: 20px;
@@ -106,7 +110,7 @@ input [type='checkbox'] {
 .edit_todo{
     color: var(--blue-color);
     font-size: 25px;
-    max-width: 250px;
+    /* max-width: 250px; */
     font-weight: 600;
     border: none;
     outline-style: none;
@@ -119,6 +123,7 @@ input [type='checkbox'] {
 }
 
 @media (max-width: 425px) {
+
     #todo_section{
         width: 90%;
     }
@@ -136,17 +141,12 @@ input [type='checkbox'] {
         font-size: 50px;
     }
     .todo-item{
-        font-weight: 500;
-        border-radius: 7px;
-        box-shadow: 1px 2px 3px rgb(67, 67, 67);
-        padding: 8px 14px;
-        display: flex;
         margin: 15px;
         font-size: 20px;
-        justify-content: space-between;
-        align-items: center;
     }
-
+    #todo_section{
+        margin: 10px auto;
+        padding: 10px ;
+    }
 }
-
 
