--- a/src/index.css
+++ b/src/index.css
@@ -10,12 +10,12 @@
     @apply bg-gray-200 hover:bg-gray-300 focus:bg-gray-300 text-gray-700 font-semibold py-2 px-4 mx-2 rounded-full shadow-md;
   }
   
-  .red-button {
-    @apply bg-red-800 hover:bg-red-600 focus:bg-red-600 text-white font-semibold py-2 px-4 mx-2 rounded-lg shadow-md;
+  .blue-button {
+    @apply bg-blue-800 hover:bg-blue-600 focus:bg-blue-600 text-white font-semibold py-2 px-4 mx-2 rounded-lg shadow-md;
   }
   
-  .red-button-rounded {
-    @apply bg-red-800 hover:bg-red-600 focus:bg-red-600 text-white font-semibold py-2 px-4 mx-2 rounded-full shadow-md;
+  .blue-button-rounded {
+    @apply bg-blue-800 hover:bg-blue-600 focus:bg-blue-600 text-white font-semibold py-2 px-4 mx-2 rounded-full shadow-md;
   }
     .primary-heading {
     @apply lg:text-4xl text-3xl font-bold;
