--- a/src/components/homePage/Home.css
+++ b/src/components/homePage/Home.css
@@ -5,6 +5,8 @@
     box-sizing: border-box;
     width: 80%;
     margin: auto;
+    margin: 120px auto;
+
 }
 .main-section-reverse{
     display: flex;
@@ -12,9 +14,10 @@
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
-    height:calc(100vh - 80px);
     width: 80%;
     margin: auto;
+    margin: 120px auto;
+
 }
 .main-content{
     flex: 1;
@@ -32,7 +35,7 @@
     justify-content: center;
 }
 .main-image img{
-    width: 90%;
+    max-width: 300px;
 }
 
 @media (max-width: 760px) {
