--- a/src/components/homePage/Home.css
+++ b/src/components/homePage/Home.css
@@ -1,61 +1,57 @@
-.main-section{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box;
-    width: 80%;
-    margin: auto;
-    margin: 120px auto;
-
+.main-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  width: 80%;
+  margin: auto;
+  margin: 120px auto;
 }
-.main-section-reverse{
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box;
-    width: 80%;
-    margin: auto;
-    margin: 120px auto;
-
+.main-section-reverse {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  width: 80%;
+  margin: auto;
+  margin: 120px auto;
 }
-.main-content{
-    flex: 1;
-    width: 90%;
+.main-content {
+  flex: 1;
+  width: 90%;
 }
-.section-heading{
-    font-size: 33px;
+.section-heading {
+  font-size: 33px;
 }
-.section-description{
-    font-size: 18px;
-
+.section-description {
+  font-size: 18px;
 }
-.main-image{
-    display: flex;
-    justify-content: center;
+.main-image {
+  display: flex;
+  justify-content: center;
 }
-.main-image img{
-    max-width: 300px;
+.main-image img {
+  max-width: 300px;
 }
 
 @media (max-width: 760px) {
-    .main-section, .main-section-reverse{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 100px auto;
-    } 
-    .main-content{
-        width: 90%;
-        flex: 1;
-        text-align: center;
-    }
-    .section-description{
-        font-size: 18px;
-        
-    }
-    .main-image img{
-        width: 90%;
-    }
-   
+  .main-section,
+  .main-section-reverse {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 100px auto;
+  }
+  .main-content {
+    width: 90%;
+    flex: 1;
+    text-align: center;
+  }
+  .section-description {
+    font-size: 18px;
+  }
+  .main-image img {
+    width: 90%;
+  }
 }
