--- a/src/index.css
+++ b/src/index.css
@@ -3,26 +3,26 @@
 @tailwind utilities;
 
 .white-button {
-    @apply bg-gray-200 hover:bg-gray-300 focus:bg-gray-300 text-gray-700 font-semibold py-2 px-4 mx-2 rounded-lg shadow-md;
-  }
-  
-  .white-button-rounded {
-    @apply bg-gray-200 hover:bg-gray-300 focus:bg-gray-300 text-gray-700 font-semibold py-2 px-4 mx-2 rounded-full shadow-md;
-  }
-  
-  .blue-button {
-    @apply bg-blue-800 hover:bg-blue-600 focus:bg-blue-600 text-white font-semibold py-2 px-4 mx-2 rounded-lg shadow-md;
-  }
-  
-  .blue-button-rounded {
-    @apply bg-blue-800 hover:bg-blue-600 focus:bg-blue-600 text-white font-semibold py-2 px-4 mx-2 rounded-full shadow-md;
-  }
-    .primary-heading {
-    @apply lg:text-4xl text-3xl font-bold;
-  }
-  .secondary-heading {
-    @apply text-[#163c90] lg:text-3xl text-2xl font-bold;
-  }
-   .primary-color {
-    @apply text-[#163c90]
-  } 
+  @apply bg-gray-200 hover:bg-gray-300 focus:bg-gray-300 text-gray-700 font-semibold py-2 px-4 mx-2 rounded-lg shadow-md;
+}
+
+.white-button-rounded {
+  @apply bg-gray-200 hover:bg-gray-300 focus:bg-gray-300 text-gray-700 font-semibold py-2 px-4 mx-2 rounded-full shadow-md;
+}
+
+.blue-button {
+  @apply bg-blue-800 hover:bg-blue-600 focus:bg-blue-600 text-white font-semibold py-2 px-4 mx-2 rounded-lg shadow-md;
+}
+
+.blue-button-rounded {
+  @apply bg-blue-800 hover:bg-blue-600 focus:bg-blue-600 text-white font-semibold py-2 px-4 mx-2 rounded-full shadow-md;
+}
+.primary-heading {
+  @apply sm:text-3xl text-2xl font-bold;
+}
+.secondary-heading {
+  @apply text-[#163c90] sm:text-2xl text-xl font-bold;
+}
+.primary-color {
+  @apply text-[#163c90];
+}
