--- a/src/components/homePage/Home.css
+++ b/src/components/homePage/Home.css
@@ -32,7 +32,7 @@
   justify-content: center;
 }
 .main-image img {
-  max-width: 500px;
+  width: 500px;
 }
 
 @media (max-width: 760px) {
@@ -48,10 +48,16 @@
     flex: 1;
     text-align: center;
   }
+  .main-image{
+    flex: 1;
+  }
   .section-description {
     font-size: 18px;
   }
   .main-image img {
     width: 90%;
+  }
+  .main-image img {
+    width: 300px;
   }
 }
